--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,4 @@
-remote_theme: tomjoht/documentation-theme-jekyll
+plugins:
+  - jekyll-remote-theme
+  
+  remote_theme: chromatical/jekyll-materialdocs
